# typed-duration

./: CHANGELOG.md  README.md  typed-duration.cabal  typed-timeout.cabal
src/Control/Concurrent/: Timeout.hs
src/Data/: Duration.hs
src/Data/Duration/: Unit.hs
src/Data/Timeout/: Unit.hs
