name:                typed-timeout
version:             0.1.0.0
synopsis:
    Thread delay and timeout functions with typed arguments
-- description:
homepage:            https://github.com/osa1/typed-timeout#readme
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          Ömer Sinan Ağacan <omeragacan@gmail.com>
copyright:           2017 Ömer Sinan Ağacan
category:            Web
build-type:          Simple
extra-source-files:
    CHANGELOG.md
    README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/osa1/typed-timeout

flag use-atomic-counter
  default: False
  manual: True

library
  hs-source-dirs:      src

  exposed-modules:
    Control.Concurrent.Timeout
    Data.Timeout.Unit

  build-depends:
    base >= 4.7 && < 5,
    lifted-base,
    monad-control,
    transformers-base

  default-language:    Haskell2010
  ghc-options:         -Wall -O2
